test/scc/stmt/semantic-errors/056.t
void test()
{
    switch(10)
    {
        case 10:
        case 20:
        case 30:
        case 10:
            break;
    }
}